[package]
name = "intern-all"
version = "0.2.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/lbfalvy/intern-all"
keywords = ["parsing", "strings", "interner", "nounsafe"]
authors = ["Lawrence Bethlenfalvy <lbfalvy@protonmail.com>"]
description = """
A safe and predictable interner for data of mixed and arbitrary type
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.14"
lazy_static = "1.4"
serde = { version = "1.0", optional = true }
trait-set = "0.3"

[features]
# implicit serde